--- a/Taller_6/app/build.gradle
+++ b/Taller_6/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
 
     //Implemented
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
